# notes-app

./: .gitignore
client/: package.json  svelte.config.js  vite.config.ts
client/src/: main.tsx
client/src/lib/components/: Header.svelte  Register.svelte  Sidebar.svelte
client/src/routes/: __layout.svelte  index.svelte
server/: Cargo.toml
server/src/: lib.rs  main.rs  note.rs  user.rs
