[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Med Fahmy <medfahmy99@gmail.com>"]

[dependencies]
axum = "0.5.6"
config = "0.13.1"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
wither = "0.9.0"
